# reproduce-error-turbomodule-rn-using-cmake

./: package-lock.json
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/cpp/: secrets.cpp
